--- a/client/style.css
+++ b/client/style.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .icon-primary {
+        @apply h-4 w-4;
+    }
+}
